
namespace Domain.Enums
{
    public enum EmployeeStatus
    {
        Active,
        Inactive,
        OnLeave,
        Terminated,
        Suspended,
        Retired
    }
}
